upload subject by image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jmx.enabled = true
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+
+baidu.ai.img.app.id=14327973
+baidu.ai.img.api.key=MdSjVEcS6s7bBErwdzEbcHQg
+baidu.ai.img.secret.key=OG6GmDmCcLivTN43YqqXYPf6GW32xCAB
